# ADKAgentProject

./: README.md  chatUI.py  pyproject.toml  requariments.txt
chroma_db/: chroma.sqlite3
code/: key_testing.py
main_agent/: agent.py
mcp_agent/: agent.py
pdf_agent/: agent.py  chroma_loader.py  test_connections.py  test_retrieval.py
pdf_agent/chroma_db/: chroma.sqlite3
